<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesLogin">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/themeTopAppBar1"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/TituloApp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_bottom_height"
            android:hint="Ingrea tu correo"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_email"
            android:text="@string/Ingresar_email"
            android:layout_width="240dp"
            android:layout_height="@dimen/m_bottom_height"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            style="@style/button_relleno"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="24dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/Acceso"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_google"
            android:text="@string/Ingresar_google"
            android:layout_width="240dp"
            app:icon="@drawable/google"
            app:iconSize="24dp"
            app:iconTintMode="multiply"
            android:textColor="@color/black"
            android:layout_height="@dimen/m_bottom_height"
            android:layout_marginTop="40dp"
            style="@style/border_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_facebook"
            android:text="@string/Ingresar_facebook"
            android:layout_width="240dp"
            app:icon="@drawable/facebook"
            app:iconSize="24dp"
            android:textAlignment="center"
            app:iconTintMode="multiply"
            android:textColor="@color/black"
            android:layout_height="@dimen/m_bottom_height"
            android:layout_marginTop="40dp"
            style="@style/border_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ingresar_twitter"
            android:text="@string/Ingresar_twitter"
            android:layout_width="240dp"
            app:icon="@drawable/twitter"
            app:iconSize="24dp"
            android:textAlignment="center"
            app:iconTintMode="multiply"
            android:textColor="@color/black"
            android:layout_height="@dimen/m_bottom_height"
            android:layout_marginTop="40dp"
            style="@style/border_button"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/arial"
            android:text="@string/Politicas"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>